# cookiecutter-python-simple

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  justfile  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
hooks/: post_gen_project.py
tests/: test_create_template.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/tests/: test_main.py
