[project]
name = "cookiecutter-python-simple"
version = "0.1.0"
description = "Very simple python project template"
authors = [{ name = "Zahid Kizmaz", email = "tech@zahid.rocks" }]
license = "MIT"
readme = "README.md"
dependencies = ["cookiecutter"]
optional-dependencies.dev = [
	"black",
	"cookiecutter",
	"pre-commit",
	"pytest",
	"pytest-cookies",
]

[tool.black]
preview = true
line-length = 88
target-version = ['py312']
extend-exclude = "{{cookiecutter.project_slug}}/tests"
